--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "dotenv": "^5.0.1",
     "lodash": "^3.10.1",
+    "npm": "^6.0.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
